@@ -5591,10 +5591,6 @@ namespace libtorrent
 			|| m_ses.num_connections() >= m_ses.settings().get_int(settings_pack::connections_limit))
 			return;
 
-#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING
-		debug_log("resolving web seed: %s", web->url.c_str());
-#endif
-
 		std::string protocol;
 		std::string auth;
 		std::string hostname;
@@ -5697,10 +5693,18 @@ namespace libtorrent
 			return;
 		}
 
+#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING
+		debug_log("resolving web seed: %s", web->url.c_str());
+#endif
+
 		proxy_settings const& ps = m_ses.proxy();
 		if (ps.type == proxy_settings::http
 			|| ps.type == proxy_settings::http_pw)
 		{
+#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING
+			debug_log("resolving proxy for web seed: %s", web->url.c_str());
+#endif
+
 			// use proxy
 			web->resolving = true;
 			tcp::resolver::query q(ps.hostname, to_string(ps.port).elems);
@@ -5715,6 +5719,10 @@ namespace libtorrent
 		}
 		else
 		{
+#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING
+			debug_log("resolving web seed: %s", web->url.c_str());
+#endif
+
 			web->resolving = true;
 			tcp::resolver::query q(hostname, to_string(port).elems);
 			m_host_resolver.async_resolve(q,
@@ -5853,11 +5861,15 @@ namespace libtorrent
 			return;
 		}
 
+		tcp::endpoint a(host->endpoint());
+
+		// fill in the peer struct's address field
+		web->endpoint = a;
+
 		if (int(m_connections.size()) >= m_max_connections
 			|| m_ses.num_connections() >= m_ses.settings().get_int(settings_pack::connections_limit))
 			return;
 
-		tcp::endpoint a(host->endpoint());
 		connect_web_seed(web, a);
 	}
 
